log
Wed 22 Mar 2023 02:59:10 AM UTC: 
 tests:  0|6
total_score: 0/70
f736123
Wed 22 Mar 2023 03:11:23 AM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:15: error: statement with no effect [-Werror=unused-value]
   35 |   lista->head == NULL;
      |               ^
list.c:36:8: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   36 |   lista->prev == NULL;
      |        ^~
cc1: all warnings being treated as errors
Compilation failed
b9c52f4
Wed 22 Mar 2023 03:11:31 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:8: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   36 |   lista->prev = NULL;
      |        ^~
Compilation failed
aac3acc
Wed 22 Mar 2023 03:11:42 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ccb052
Wed 22 Mar 2023 03:15:28 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ff82ab0
Sat 25 Mar 2023 05:52:45 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
cd22dcf
Sat 25 Mar 2023 06:03:03 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:66:38: error: expected ‘;’ before ‘return’
   66 |   list->current = list->current->prev
      |                                      ^
      |                                      ;
   67 | 
   68 |   return list->current->prev;
      |   ~~~~~~                              
list.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b3e7ec9
Sat 25 Mar 2023 06:03:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
687d7de
Sat 25 Mar 2023 06:11:32 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
62ee8e7
Sat 25 Mar 2023 06:17:45 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:13: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   72 |   Node* n = createnode(data);
      |             ^~~~~~~~~~
      |             createNode
list.c:72:13: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:73:23: error: expected ‘;’ before ‘if’
   73 |   n->next = list->head
      |                       ^
      |                       ;
   74 |   if(list->head){
      |   ~~                   
cc1: all warnings being treated as errors
Compilation failed
2c0d14f
Sat 25 Mar 2023 06:18:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:13: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   72 |   Node* n = createnode(data);
      |             ^~~~~~~~~~
      |             createNode
list.c:72:13: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
f0db5c2
Sat 25 Mar 2023 06:18:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
385c16d
Sat 25 Mar 2023 06:19:02 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
4f245c6
Sat 25 Mar 2023 07:12:05 PM UTC: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   72 |   if(list == NULL) return NULL;
      |                           ^~~~
list.c:71:6: note: declared here
   71 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c1b0486
Sat 25 Mar 2023 07:12:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
49bfb46
Sat 25 Mar 2023 07:25:37 PM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:93:29: error: ‘List’ {aka ‘struct List’} has no member named ‘currrent’; did you mean ‘current’?
   93 |   if (list == NULL || list->currrent == NULL) return;
      |                             ^~~~~~~~
      |                             current
Compilation failed
7d51912
Sat 25 Mar 2023 07:25:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
a25152b
Sat 25 Mar 2023 08:06:08 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:119:45: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  119 |   if(list == NULL || list->current == NULL) return;
      |                                             ^~~~~~
list.c:118:8: note: declared here
  118 | void * popCurrent(List * list) {
      |        ^~~~~~~~~~
list.c:120:31: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
  120 |   void* dato = list->current->dato;
      |                               ^~~~
      |                               data
list.c:122:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
  122 |     list->prev->next = list->next;
      |         ^~
list.c:122:28: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
  122 |     list->prev->next = list->next;
      |                            ^~
cc1: all warnings being treated as errors
Compilation failed
06403aa
Sat 25 Mar 2023 08:07:46 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
e7b682a
Sat 25 Mar 2023 08:11:56 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:137:3: error: expected ‘;’ before ‘return’
  137 |   return dato;
      |   ^~~~~~
list.c:120:9: error: unused variable ‘dato’ [-Werror=unused-variable]
  120 |   void* dato = list->current->data;
      |         ^~~~
list.c:138:1: error: control reaches end of non-void function [-Werror=return-type]
  138 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4c9dc36
